<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GeneralActivity"
    android:background="@color/green"
    android:orientation="vertical">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="27dp"
            android:layout_marginTop="23dp"
            android:text="@string/spisok"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            >
        </TextView>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:src="@drawable/logo"
            android:layout_marginLeft="145dp"
            android:layout_marginTop="12dp">
        </androidx.appcompat.widget.AppCompatImageButton>
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/button4"
        android:orientation="vertical">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/pohod"
                android:textColor="@color/white"
                android:textSize="16dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"
                android:layout_marginLeft="110dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/pohod_colegi"
                android:textColor="@color/white"
                android:textSize="13dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time3"
                android:layout_marginLeft="120dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button4"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/zakaz_ozon"
                android:textColor="@color/white"
                android:textSize="16dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"
                android:layout_marginLeft="135dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/punkt"
                android:textColor="@color/white"
                android:textSize="13dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time3"
                android:layout_marginLeft="83dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/button4"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="10dp"
                android:text="@string/autoservice"
                android:textColor="@color/white"
                android:textSize="16dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date1"
                android:layout_marginLeft="125dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/service2"
                android:textColor="@color/white"
                android:textSize="13dp"></TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time3"
                android:layout_marginLeft="47dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="13dp"
                ></TextView>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="4dp"
                android:text="@string/service3"
                android:textColor="@color/white"
                android:textSize="13dp"></TextView>
        </TableRow>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="100dp"
        android:text="@string/add_task"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18dp">
    </androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button3"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="33dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/list"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:layout_marginLeft="55dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button1"
                android:src="@drawable/alarm"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_text"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/calendar"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:layout_marginLeft="20dp"
                android:textColor="@color/green"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/settings"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginLeft="15dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

    </LinearLayout>
</TableLayout>