<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity"
    android:background="@color/green"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="22dp"
            android:text="@string/alarm"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"/>
        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button1"
            android:src="@drawable/logo"
            android:layout_marginLeft="195dp"
            android:layout_marginTop="12dp">
        </androidx.appcompat.widget.AppCompatImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time1"
            android:textSize="48dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="37dp"></TextView>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_off_on"
            android:src="@drawable/btnoff"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="195dp"></androidx.appcompat.widget.AppCompatImageButton>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time2"
            android:textSize="48dp"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="37dp"></TextView>

        <androidx.appcompat.widget.AppCompatImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_off_on"
            android:src="@drawable/btnon"
            android:layout_marginTop="50dp"
            android:layout_marginLeft="195dp"></androidx.appcompat.widget.AppCompatImageButton>
    </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button2"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="200dp"
            android:text="@string/add_alarm"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="18dp">
        </androidx.appcompat.widget.AppCompatButton>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button3"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="33dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/list"
                android:layout_marginLeft="55dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/list"
                android:layout_marginLeft="60dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/button1"
                android:src="@drawable/alarm"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alarm_text"
                android:layout_marginLeft="30dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/calendar"
                android:layout_marginLeft="35dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calendar"
                android:layout_marginLeft="20dp"
                android:textColor="@color/green"
                android:textSize="18dp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button1"
                android:src="@drawable/settings"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="10dp"></androidx.appcompat.widget.AppCompatImageButton>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/settings"
                android:layout_marginLeft="15dp"
                android:textColor="@color/red"
                android:textSize="18dp"></TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>