<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTaskActivity"
    android:background="@color/green"
    android:orientation="vertical">
    <TableRow
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:text="@string/add_task"
            android:textColor="@color/white"
            android:textSize="24dp"
            android:textStyle="bold"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"></TextView>
        <androidx.appcompat.widget.AppCompatImageButton
            android:background="@drawable/button1"
            android:src="@drawable/backbutton"
            android:layout_marginLeft="130dp"
            android:layout_marginTop="15dp"></androidx.appcompat.widget.AppCompatImageButton>
    </TableRow>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@drawable/button5"
        android:layout_marginTop="70dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="42dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:hint="Заголовок задачи"
            android:textColor="#D3D3D3"
            android:inputType="text"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button6"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="41dp"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/alarm2"
                android:background="@drawable/button1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"></androidx.appcompat.widget.AppCompatImageButton>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:hint="16:30"
                android:textColor="#D3D3D3"
                android:inputType="text"></EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button6"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="30dp"
            >
            <androidx.appcompat.widget.AppCompatImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/calendar2"
                android:background="@drawable/button1"
                android:layout_marginLeft="15dp"
                android:layout_marginTop="15dp"></androidx.appcompat.widget.AppCompatImageButton>
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:backgroundTint="@color/white"
                android:layout_weight="1"
                android:layout_marginRight="30dp"
                android:hint="@string/date1"
                android:textColor="#D3D3D3"
                android:inputType="text"></EditText>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button7"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp">
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:backgroundTint="@color/white"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:hint="Описание задачи"
            android:textColor="#D3D3D3"
            android:inputType="text"></EditText>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button2"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="150dp"
        android:text="@string/zapisat"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:textSize="18dp">
    </androidx.appcompat.widget.AppCompatButton>

</GridLayout>